feat: expose roles and permissions API
